Fix position of gem count in stats graph
On smaller devices, the gem count value could overlap the gem name.
This overlap prevented users from clicking the link associated with the
gem name.

Using the `left` property for positioning the count ensures that the gem
name remains clickable, resolving the usability issue on small screens.

--- a/app/assets/stylesheets/modules/stats.css
+++ b/app/assets/stylesheets/modules/stats.css
@@ -188,7 +188,7 @@
 
 .stats__graph__gem__count {
   position: absolute;
-  right: 12px; }
+  left: 12px; }
   @media (max-width: 419px) {
     .stats__graph__gem__count {
       font-size: 12px; } }
